<resources>
    <string name="app_name">SNS NEW</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delivered">DELIVERED</string>
    <string name="deliver">Deliver</string>
    <string name="pending">PENDING</string>
    <string name="parcels_selected">%1$s selected</string>
    <string name="no_parcel_error">No Parcels to Update</string>
    <string name="selected_parcel_error">No Parcels Selected.</string>
    <string name="total_parcels">Total Parcels</string>
    <string name="payment_collection">Payment Collected</string>
    <string name="customer_id_search">Customer #</string>
    <string name="payment_received">PAYMENT RECEIVED</string>
    <string name="total_payment">Total Payment</string>
    <string name="transactionid">TRANSACTION #</string>
    <string name="collected_by">COLLECTED BY</string>
    <string name="payment_cash">CASH</string>
    <string name="payment_card">CARD</string>
    <string name="parcel_customer_name">Name: %1$s</string>
    <string name="parcel_customer_id">Cust id: %1$s</string>
    <string name="parcel_customer_address">Add: %1$s</string>
    <string name="payment_collection_cash">CASH \n %1$s</string>
    <string name="payment_collection_card">CARD SWIPE \n %1$s</string>
    <string name="title_customer_search">Customer Search</string>
    <string name="title_delivery_payment">Delivery Payment</string>
    <string name="title_allparcels">Pending/Delivered</string>
    <string name="different_parcels_error">Parcels from different customer cannot be selected</string>
    <string name="parcel_updated_msg">Parcel Status has been Updated</string>
    <string name="cancel">Cancel</string>
    <string name="error_transcid_error">Cannot Insert Transaction into database.</string>
    <string name="permissions_missing">Some of permissions are not Granted</string>
    <string name="add_parcel_title">Stock In</string>
    <string name="ready_for_delivery">Ready For Delivery</string>
    <string name="invoices">Invoices</string>
    <string name="payment">Payment</string>
    <string name="logout_success">You have been Logout Successfully!!</string>
    <string name="sweet_alert_warning_title">Warning !!</string>
    <string name="service_progressdialog_title">Loading...</string>
    <string name="sweet_alert_error_title">Oops...</string>
    <string name="default_auction_title">Auction</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_start_sync">Start Sync</string>
    <string name="navigation_header_device">Device #%1$s</string>
    <string name="navigation_header_company">Tigmoo ShopNShip</string>
    <string name="navigation_pateint_order">Patient Order</string>
    <string name="navigation_location">Locations</string>
    <string name="device_name">Device Name</string>
    <string name="printer">Printer</string>
    <string name="print">Print</string>
    <string name="printer_address">Printer Address</string>
    <string name="touch_to_scan">Touch to Scan</string>
    <string name="save">Save</string>
    <string name="btn_restart">Restart</string>
    <string name="title_printerlist">Printer List</string>
    <string name="printer_logs">Printer logs</string>
    <string name="title_target">Target</string>
    <string name="settings_saved">Settings saved</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_err">Error</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="drawer_2pin">2 Pin</string>
    <string name="drawer_5pin">5 Pin</string>
    <string name="drawer_high">High</string>
    <string name="drawer_low">Low</string>
    <string name="pos_live">Kasse 1</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="dialog_printer_settings_error_msg">Printer Settings are not Correct!! please provide correct and fill values</string>
    <string name="dialog_webview_null_error_msg">Webview Instance is null Please restart the app?</string>
    <string name="dialog_permission_denied_error_msg">App need these permissions to work normally? Please Restart app and provide permissions.</string>
    <string name="dialog_ftp_url_error_msg">Ftp Url either invalid or empty?</string>
    <string name="dialog_reader_settings_error_msg">NFC nicht verbunden...Jetzt einstellen?</string>
    <string name="dialog_pos_settings_error_msg">Kasse nicht verbunden...Jetzt einstellen?</string>
    <string name="dialog_reader_retry_msg">NFC nicht verbunden. Noch mal versuchen ?</string>
    <string name="reader_response_fail">Karte nicht lesbar</string>
    <string name="dialog_pooling_not_stopped">Polling is Enabled. do you want to stop polling and Try Again?</string>
    <string name="printer_disabled">Drucker ist deaktiviert.</string>
    <string name="space1">&#160;</string>
    <string name="space2">&#160;&#160;</string>
    <string name="space3">&#160;&#160;&#160;</string>
    <string name="space4">&#160;&#160;&#160;&#160;</string>
    <string name="space5">&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space6">&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space7">&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space8">&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space9">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space10">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space11">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space12">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space13">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space14">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space15">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space16">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space17">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space18">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space19">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space20">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space21">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space22">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space23">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space24">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space25">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space26">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space27">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space28">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space29">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space30">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="line">------------------------------\n</string>
    <string name="qty">Item Id</string>
    <string name="euro">&#8364;&#160;</string>
    <string name="zmw">K</string>
    <string name="euro_without_space">&#8364;</string>
    <string name="black_star">&#9733;</string>
    <string name="white_star">&#9734;</string>
    <string name="vertical_bar">&#124;</string>
    <string name="positive">+</string>
    <string name="negative">-</string>
    <string name="desc">Description</string>
    <string name="apdu_command">APDU command</string>
    <string name="atr">ATR</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_key">Authentication Key</string>
    <string name="amount">Amount</string>
    <string name="total_incl_vat">Grand total:&#160;</string>
    <string name="cash_given">Cash Given:&#160;</string>
    <string name="payment_method">Payment by:&#160;</string>
    <string name="cash_recieve">Cash Received:&#160;</string>
    <string name="order_number">Invoice No:</string>
    <string name="served_by">Cashier:</string>
    <string name="customer_email">Email:</string>
    <string name="customer_mobile">Phone:</string>
    <string name="customer_name">Name:</string>
    <string name="date">Date:&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="thankyou_msg">Thank you for your purchase \nDownload Our App from Playstore \n</string>
    <string name="invoice_header">Tigmoo Shop N Ship \n Plot 6392 Dundudza Chididza Road \n Longacres, Lusaka \n www.tigmooshopnship.com \n 0971269390\n\nTPIN: DE162463073</string>
    <string name="invoice_title">Invoice</string>
</resources>