<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="10"

    >


    <TextView
    android:id="@+id/invoice_detail_itemid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="@dimen/_5sdp"
        android:text="@string/qty"


        />

    <TextView
        android:id="@+id/invoice_detail_itemdesc"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:padding="@dimen/_5sdp"
        android:text="@string/desc"


        />

    <TextView
        android:id="@+id/invoice_detail_itemamt"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="@dimen/_5sdp"
        android:text="@string/amount"


        />


</LinearLayout>