<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal"
        android:weightSum="10"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="#FFFFFF"
            android:orientation="vertical"


            >

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/btn_restart" />

            <TextView
                android:id="@+id/txtList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title_printerlist"
                android:textColor="#000000" />

            <ListView
                android:id="@+id/lstReceiveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_logs_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="10"


            >


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:padding="10dp"

                android:text="@string/printer_logs"
                android:textColor="@color/black" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/statusTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:padding="10dp"

                    android:text=""
                    android:textColor="@color/black" />
            </ScrollView>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>